--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://113.108.141.68:8090/attachment_estudio/ZLCWebView.ipa</string>
+					<string>https://github.com/xtyzmnchen/plistDocument/blob/master/ZLCWebView.ipa?raw=true</string>
 				</dict>
 				<dict>
 					<key>kind</key>
